testing/framework/resources/Advanced/Failing/mondrian/query521.e
HeadQuarters	CA	\N	\N	1
Small Grocery	CA	22478	15321	1
Gourmet Supermarket	CA	23688	15337	1
Supermarket	CA	23598	14210	2
